--- a/frontend/src/styles/components/Header.css
+++ b/frontend/src/styles/components/Header.css
@@ -67,7 +67,7 @@
   color: hsl(var(--foreground));
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 
 .search-input {
